--- a/AIDriven_Lab_Exercise.ipynb
+++ b/AIDriven_Lab_Exercise.ipynb
@@ -29,6 +29,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Lab Exercise Step 1A: Create a test data set for exploring network traffic\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
@@ -75,6 +76,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Lab Exercise Step 1B: Explore test data set for network traffic\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -132,6 +134,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Lab Exercise Step 2: Preprocess and prepare data for Machine Learning\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
@@ -203,6 +206,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Lab Exercise Step 3: Train model to recognize patterns\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -269,6 +273,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Lab Exercise Step 4: Evaluation of Machine Learning model against data\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
